--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,7 +4,7 @@
 body {
   padding: 0;
   margin: 0;
-  color: #fff;
+  color: var(--color-zinc-100);
 }
 
 * {
@@ -13,5 +13,23 @@ body {
 }
 
 :root {
-  background-color: #27272a;
+  /* tailwind css color */
+  --color-zinc-100: #f4f4f5;
+  --color-zinc-200: #e4e4e7;
+  --color-zinc-300: #d4d4d8;
+  --color-zinc-400: #a1a1aa;
+  --color-zinc-500: #71717a;
+  --color-zinc-600: #52525b;
+  --color-zinc-700: #3f3f46;
+  --color-zinc-800: #27272a;
+
+  --color-violet-200: #ddd6fe;
+  --color-violet-300: #c4b5fd;
+  --color-violet-400: #a78bfa;
+  --color-violet-500: #8b5cf6;
+  --color-violet-600: #7c3aed;
+  --color-violet-700: #6d28d9;
+  --color-violet-800: #5b21b6;
+
+  background-color: var(--color-zinc-800);
 }
